refactor: single OpenAPI-specified aggregates field (FLEX-1143)
