# backend/data/models/models.go
@@ -1,6 +1,6 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
-//   sqlc v1.31.0
+//   sqlc v1.31.1
 
 package models
 
@@ -113,14 +113,8 @@ type ApiControllableUnitServiceProviderHistory struct {
 }
 
 type ApiControllableUnitSummary struct {
-	ID                                 int
-	CountTechnicalResource             int
-	CountTechnicalResourceByTechnology []byte
-	SumMaximumActivePower              float64
-	SumMaximumActivePowerProduction    float64
-	SumMaximumActivePowerConsumption   float64
-	SumMaximumActivePowerEnergyStorage float64
-	AverageMaximumActivePower          float64
+	ID         int
+	Aggregates []byte
 }
 
 type ApiControllableUnitSuspension struct {
